--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie-edge">
     <title>Uber</title>
-    <link rel="shortcut icon" href="../Icons/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="Icons/favicon.ico" type="image/x-icon">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
-    <link href="../Css/bootstrap-reboot.min.css" rel="stylesheet">
-    <link href="../Css/bootstrap-grid.min.css" rel="stylesheet">
+    <link href="Css/bootstrap-reboot.min.css" rel="stylesheet">
+    <link href="Css/bootstrap-grid.min.css" rel="stylesheet">
     <script src="https://kit.fontawesome.com/e23ab115ae.js" crossorigin="anonymous"></script>
-    <link href="../Css/style.min.css" rel="stylesheet">
+    <link href="Css/style.min.css" rel="stylesheet">
 </head>
 
 <body>
@@ -44,7 +44,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-6 col-md-4 offset-md-1">
-                        <a href="#" class="subheader_logo"><img src="../Icons/Uber.png" alt="logo"></a>
+                        <a href="#" class="subheader_logo"><img src="Icons/Uber.png" alt="logo"></a>
                         <div class="subheader_official">Официальный партнер Uber в Москве</div>
                     </div>
                     <div class="xs-hidden col-md-3 offset-md-1 col-xl-2 offset-xl-2">
@@ -93,7 +93,7 @@
                 <div class="col-md-6">
                     <div class="benefit_block">
                         <div class="benefit_round">
-                            <img src="../Icons/card.png" alt="card">
+                            <img src="Icons/card.png" alt="card">
                         </div>
                         <div class="benefit_text">
                             <span class="benefit_text_style"> Никаких наличных, оплата происходит автоматически</span>
@@ -106,7 +106,7 @@
                 <div class="col-md-6">
                     <div class="benefit_block">
                         <div class="benefit_round">
-                            <img src="../Icons/diagram.png" alt="diagram">
+                            <img src="Icons/diagram.png" alt="diagram">
                         </div>
                         <div class="benefit_text">
                             <span class="benefit_text_style">Комиссия 8% + БОНУСЫ</span>
@@ -119,7 +119,7 @@
                 <div class="col-md-6">
                     <div class="benefit_block">
                         <div class="benefit_round">
-                            <img src="../Icons/money.png" alt="money">
+                            <img src="Icons/money.png" alt="money">
                         </div>
                         <div class="benefit_text">
                             <span class="benefit_text_style">Высокий доход с гарантированными выплатами</span>
@@ -132,7 +132,7 @@
                 <div class="col-md-6">
                     <div class="benefit_block">
                         <div class="benefit_round">
-                            <img src="../Icons/calendar.png" alt="calendar">
+                            <img src="Icons/calendar.png" alt="calendar">
                         </div>
                         <div class="benefit_text">
                             <span class="benefit_text_style">Работа в удобное время, никаких графиков</span>
@@ -145,7 +145,7 @@
                 <div class="col-md-6">
                     <div class="benefit_block">
                         <div class="benefit_round">
-                            <img src="../Icons/key.png" alt="key">
+                            <img src="Icons/key.png" alt="key">
                         </div>
                         <div class="benefit_text">
                             <span class="benefit_text_style">Комфортное, прозрачное и простое подключение</span>
@@ -158,7 +158,7 @@
                 <div class="col-md-6">
                     <div class="benefit_block">
                         <div class="benefit_round">
-                            <img src="../Icons/gps.png" alt="gps">
+                            <img src="Icons/gps.png" alt="gps">
                         </div>
                         <div class="benefit_text">
                             <span class="benefit_text_style">Всегда большое количество заказов</span>
@@ -171,7 +171,7 @@
                 <div class="col-md-6">
                     <div class="benefit_block">
                         <div class="benefit_round">
-                            <img src="../Icons/phone.png" alt="phone">
+                            <img src="Icons/phone.png" alt="phone">
                         </div>
                         <div class="benefit_text">
                             <span class="benefit_text_style">Круглосуточная поддержка</span>
@@ -184,7 +184,7 @@
                 <div class="col-md-6">
                     <div class="benefit_block">
                         <div class="benefit_round">
-                            <img src="../Icons/car.png" alt="car">
+                            <img src="Icons/car.png" alt="car">
                         </div>
                         <div class="benefit_text">
                             <span class="benefit_text_style">Без шашечек и наклеек</span>
@@ -254,7 +254,7 @@
             <div class="label">Возможности</div>
             <div class="title">Выбор - отличная штука!</div>
             <div class="subtitle">Закажите автомобиль, который подходит вам по стилю и бюджету</div>
-            <img src="../Icons/uber_car.png" alt="uber_car" class="choice_img">
+            <img src="Icons/uber_car.png" alt="uber_car" class="choice_img">
             <div class="choice_descr">
                 Машины на каждый день.  
                 <br>
@@ -384,13 +384,13 @@
             <div>
                 <div class="footer_mobile">
                     <a href="#">
-                        <img src="../Icons/apple_store.png" alt="App Store">
+                        <img src="Icons/apple_store.png" alt="App Store">
                     </a>
                     <a href="#">
-                        <img src="../Icons/google_play.png" alt="Google play">
+                        <img src="Icons/google_play.png" alt="Google play">
                     </a>
                     <a href="#">
-                        <img src="../Icons/windows_store.png" alt="Windows store">
+                        <img src="Icons/windows_store.png" alt="Windows store">
                     </a>
                 </div>
             </div>
@@ -399,6 +399,6 @@
 
     </footer>
 
-    <script src="../Js/script.js"></script>
+    <script src="Js/script.js"></script>
 </body>
 </html>
